--- a/source/404.html
+++ b/source/404.html
@@ -112,7 +112,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-image: url(https://iw233.cn/api.php?sort=mp);
+            background-image: url(https://dev.iw233.cn/api.php?sort=top);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center 0;
@@ -175,7 +175,7 @@
             videoClick();
         }
         function buttonClick2(event) {
-            window.location.href = 'https://hehysh.github.io'
+            window.location.href = 'https://hehysh.vercel.app'
         }
         function videoClick(event) {
             if (event) event.preventDefault();
